# aoc

./: README.md
2024/: day1.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  pyproject.toml
